<!DOCTYPE resources [
        <!ENTITY appname "Public transport widget">
        ]>
<resources>
    <string name="app_name">&appname;</string>
    <string name="select_widget">Select the widget &appname; to get started</string>
    <string name="help_set_battery_optimization">Make sure app &appname; is listed as not optimized</string>
    <string name="action_settings">Settings</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_add_stop">Settings</string>


    <string name="idle_line1">Touch once to update</string>
    <string name="idle_line2">Multiple times to configure</string>
    <string name="idle_line2_legacy">Old config - reconfigure me!</string>

    <string name="legacy_stop_detected">Old configuration version</string>
    <string name="legacy_stop">This stop is from an older version of the widget. The stop can be removed but not changed. Remove it?</string>

    <string name="stop_name">Search stop (Anywhere in Sweden)</string>
    <string name="save_stop_title">Save stop</string>

    <string name="no_departures_selected">Please select at least one departure or line</string>
    <string name="no_stop_selected">Please select a stop</string>
    <string name="missing_configuration">Need at least one stop configured</string>
    <string name="success_storing_departures">Saving configuration with %1$d stops...</string>
    <string name="location_access_rationale">Access to location allows widget to automatically display the nearest
        stop
    </string>
    <string name="location_access_give">Give access</string>
    <string name="stop_display_name">Display stop as</string>

    <string name="select_departures_tab">Or select departures</string>
    <string name="select_lines_tab">Select lines</string>
    <string name="select_stop_tab">Select stop</string>

    <string name="select_departures">Select departures</string>
    <string name="add_stop_title">Configure stop</string>
    <string name="save_widget">Save widget config</string>
    <string name="configure_widget_title">Public transport widget</string>
    <string name="updating">Updating</string>

    <string name="error">Error loading data</string>
    <string name="error_corrupt">Corrupt widget</string>
    <string name="error_timeout">Timeout loading data</string>
    <string name="error_details_try_again">Check your connectivity and try again</string>
    <string name="retry_load">Retry</string>
    <string name="delete_stop">Remove</string>
    <string name="error_no_departures">No departures found for this stop!</string>
    <string name="no_stop_added">Press the button below to add a stop</string>
    <string name="select_just_one_dep">Un-select all departures to select a line instead</string>
    <string name="select_just_one_line">Un-select all lines to pick specific departures instead</string>
    <string name="no_data">No departures</string>
    <string name="no_data_detail">No data available at this time</string>
    <string name="deleted">Deleted stop</string>
    <string name="undo">Undo</string>
    <string name="error_loading_autocomplete">Failed to search stops</string>
    <string name="updating_attempt">Updating, attempt %1$d</string>
    <string name="message_again">I do the retries here buddy...</string>
    <string name="message_again_line1">Let me do my job!</string>
    <string name="one_more_time_config">Touch one more time for config</string>
    <string name="widget_help">This application is used as a widget only. Please go back to your homescreen to add
        widgets.
    </string>
    <string name="widget_read_more">Read more about adding widgets</string>
    <string name="ok" translatable="false">OK</string>
    <string name="about_info">About</string>
    <string name="back_to_config">Back</string>
    <string name="configure_deps">Select departures to show</string>
    <string name="on_github">Project on Github</string>
    <string name="app_disclaimer">This is an open source application, developed as a small side-project for fun without
        profit :)
        \nThe app uses your location to determine what stop to show on what widget at what time.
    </string>
    <string name="realtime_info_disclaimer">
        Realtime information is available for a subset of operators including SL, Skånetrafiken, Västtrafik and most trains, see https://www.trafiklab.se/sv/api/trafiklab-apis/resrobot-v21/timetables/
    </string>
    <string name="power_save_mode">Battery saver mode - no Internet</string>
    <string name="power_save_mode_no_whitelist">Touch here to go to settings and give the app Internet during battery
        saver mode
    </string>
    <string name="auto_updates_running">Automatic updates enabled</string>
    <string name="disable_battery_optimization_query">android disable battery optimization for specific app</string>
    <string name="sl_api_error">SL server error</string>
    <string name="sl_api_error_detail">Can\'t load data from SL, error details: %1$s</string>
    <string name="theme">Theme</string>
    <string name="preview">Preview:</string>
    <string name="theme_stop">Theme stop</string>
    <string name="color_custom">Set top bar color</string>
    <string name="color_custom_text">Set text color</string>
    <string name="color_bg">Set background color</string>
    <string name="color_custom_tag_text">Set stop text color</string>
    <string name="custom_separator">Set separator color</string>
    <string name="no_data_to_theme">No stop data, can\'t change theme</string>
    <string name="update_mode">Update mode:</string>
    <string name="stops_showing_on_widget">Show data from these stops:</string>
    <string name="import_settings">Import settings from string</string>
    <string name="export_settings">Export settings to string</string>
    <string name="share_using">Store string somewhere</string>
    <string name="import_settings_btn">Import</string>
    <string name="import_settings_btn_cancel">Cancel</string>
    <string name="failed_config">Invalid config string</string>
    <string name="loaded_config">Loaded config with %1$d stops</string>
    <string name="update_mode_tab">Update settings</string>
    <string name="stop_list_tab">Stops</string>
    <string name="idle_line1_auto">Touch to start sequence</string>
    <string name="idle_line2_auto">Will update for %1$d minutes</string>
    <string name="update_on_sceen_on">Start update sequence when screen turns on (battery heavy) </string>
    <string name="update_forever">Update sequence never stops (unless screen is turned off) </string>
    <string name="update_sequence_length">Update sequence length (minutes):</string>
    <string name="self_learning_periods">Learn at most these many periods:</string>
    <string name="current_self_learning_periods">Scheduled update periods:</string>
    <string name="self_learning_threshold">Interactions required to allocate a period:</string>
    <string name="stop_sequence">Stop updating</string>
    <string name="stop_sequence_time">Remove scheduled update</string>
    <string name="will_not_update_undo">Update alarm removed</string>
    <string name="settings">Settings</string>
    <string name="save_and_exit"><![CDATA[Save & go back]]></string>

    <string name="multiple_stops">Quick toggle</string>
    <string name="quick_toggle">Press on the left or right side of a widget to cycle stops. It will default to closest stop.</string>
    <string name="quick_toggle_dismiss">Press either side to dismiss</string>
    <string name="quick_toggle_toast">You got it!</string>

    <string name="resize_hint">Resize widget: Touch and hold it. Lift finger. Drag the dots.</string>

    <string name="dot_is_scheduled">Realtime vs scheduled</string>
    <string name="dot_is_scheduled_text"><b><font size="20">min.= </font></b>scheduled time\n<font size="20"><b>min = </b></font> realtime information</string>
    <string name="dot_is_scheduled_text_dismiss">Touch the widget below showing realtime information to dismiss!</string>
    <string name="dot_is_scheduled_text_wrong">A dot after min is scheduled time, try again.</string>
    <string name="dot_is_scheduled_text_right">No dot means realtime, you go it!</string>

    <string name="sample_departure" translatable="false">12 %1$s</string>
    <string name="sample_minutes" translatable="false">3 min</string>
    <string name="sample_minutes_dot" translatable="false">3 min.</string>
    <string name="sample_minutes2" translatable="false">6 min</string>
    <string name="sample_minutes2_dot" translatable="false">6 min.</string>
    <string name="sample_stop" translatable="false">T-Centralen</string>
    <string name="sample_line1" translatable="false">11 Akalla</string>
    <string name="sample_line2_2" translatable="false">28 Göteborg Centralstation</string>
    <string name="sample_line2" translatable="false">11 Kungsträdgården, 10 Hjulsta, 28 Göteborg Centralstation     </string>
    <string name="sample_wee" translatable="false">Weeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee!!</string>
    <string name="scroller_speed">Scroll speed:</string>

    <string-array name="update_mode_array">
        <item>Learning</item>
        <item>Manual one time update</item>
        <item>Update sequence</item>
    </string-array>
    <string-array name="update_mode_help">
        <item>The widget will update once when you touch it. It will learn from your interactions and start updating automatically during
            times you use it. It keeps a separate schedule for weekdays/weekends.
        </item>
        <item>The widget will update once when you touch it.</item>
        <item>The widget will stay updated during a longer sequence when touched.
            You can choose the length of the sequence and if a sequence should automatically start when the screen turns on.</item>
    </string-array>
</resources>
