<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.AddStopActivity">
    <com.google.android.material.appbar.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/theme_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>
    </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:paddingTop="?attr/actionBarSize"
                android:layout_height="wrap_content"
                tools:context=".activity.ThemeActivity">

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/preview"
            android:id="@+id/textView"/>

            <include layout="@layout/widgetlayout_base"
                     app:layout_constraintTop_toBottomOf="@+id/textView"
                     app:layout_constraintStart_toStartOf="parent"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp" android:id="@+id/include"/>
            <LinearLayout android:layout_width="match_parent"
                          android:orientation="horizontal"
                          android:layout_height="wrap_content"
                          android:id="@+id/main_color_layout"
                          app:layout_constraintStart_toStartOf="parent"
                          app:layout_constraintTop_toBottomOf="@+id/include">
                <CheckBox
                        android:text="@string/color_custom"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:textSize="16sp"
                        android:layout_gravity="center"
                        android:weightSum="3"
                        android:id="@+id/checkBox_main"/>

                <ImageView
                        android:background="@color/colorPrimaryDark"
                        android:layout_width="@dimen/theme_color_size"
                        android:layout_height="@dimen/theme_color_size"
                        android:layout_marginEnd="@dimen/color_margin"
                        android:layout_gravity="center"
                        android:id="@+id/imageView_main_color" />
            </LinearLayout>

            <LinearLayout android:layout_width="match_parent"
                          android:orientation="horizontal"
                          android:layout_height="wrap_content"
                          android:id="@+id/text_color_layout"
                          app:layout_constraintStart_toStartOf="parent"
                          app:layout_constraintTop_toBottomOf="@+id/main_color_layout">
                <CheckBox
                        android:text="@string/color_custom_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:layout_gravity="center"
                        android:textSize="16sp"
                        android:weightSum="3"
                        android:id="@+id/checkBox_text"/>

                <ImageView
                        android:background="#ff9900"
                        android:layout_width="@dimen/theme_color_size"
                        android:layout_height="@dimen/theme_color_size"
                        android:layout_marginEnd="@dimen/color_margin"
                        android:layout_gravity="center"
                        android:id="@+id/imageView_text_color" />
            </LinearLayout>

            <LinearLayout android:layout_width="match_parent"
                          android:orientation="horizontal"
                          android:layout_height="wrap_content"
                          android:id="@+id/tag_text_color_layout"
                          app:layout_constraintStart_toStartOf="parent"
                          app:layout_constraintTop_toBottomOf="@+id/text_color_layout">
                <CheckBox
                        android:text="@string/color_custom_tag_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:layout_gravity="center"
                        android:textSize="16sp"
                        android:weightSum="3"
                        android:id="@+id/checkBox_tag_text"/>

                <ImageView
                        android:background="@color/baseWidgetTagText"
                        android:layout_width="@dimen/theme_color_size"
                        android:layout_height="@dimen/theme_color_size"
                        android:layout_marginEnd="@dimen/color_margin"
                        android:layout_gravity="center"
                        android:id="@+id/imageView_tag_text_color" />
            </LinearLayout>

            <LinearLayout android:layout_width="match_parent"
                          android:orientation="horizontal"
                          android:layout_height="wrap_content"
                          android:id="@+id/separator_color_layout"
                          app:layout_constraintStart_toStartOf="parent"
                          app:layout_constraintTop_toBottomOf="@+id/tag_text_color_layout">
                <CheckBox
                        android:text="@string/custom_separator"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:layout_gravity="center"
                        android:textSize="16sp"
                        android:weightSum="3"
                        android:id="@+id/checkBox_separator"/>

                <ImageView
                        android:background="@color/baseWidgetGreyerBg"
                        android:layout_width="@dimen/theme_color_size"
                        android:layout_height="@dimen/theme_color_size"
                        android:layout_marginEnd="@dimen/color_margin"
                        android:layout_gravity="center"
                        android:id="@+id/imageView_separator_color" />
            </LinearLayout>

            <LinearLayout android:layout_width="match_parent"
                          android:orientation="horizontal"
                          android:layout_height="wrap_content"
                          android:id="@+id/bg_color_layout"
                          app:layout_constraintStart_toStartOf="parent"
                          app:layout_constraintTop_toBottomOf="@+id/separator_color_layout">
                <CheckBox
                        android:text="@string/color_bg"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:layout_gravity="center"
                        android:textSize="16sp"
                        android:weightSum="3"
                        android:id="@+id/checkBox_bg"/>

                <ImageView
                        android:background="@color/baseWidgetGreyBg"
                        android:layout_width="@dimen/theme_color_size"
                        android:layout_height="@dimen/theme_color_size"
                        android:layout_marginEnd="@dimen/color_margin"
                        android:layout_gravity="center"
                        android:id="@+id/imageView_bg_color" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>