<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_add_stop"
        tools:context=".activity.add_stop.AddStopActivity">
    <LinearLayout
            android:orientation="vertical" android:layout_width="match_parent"
                  android:layout_height="match_parent">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_search"
            android:text="@string/stop_name"
            android:layout_marginBottom="4dp"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal" android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <AutoCompleteTextView
                android:id="@+id/stop_auto_complete"
                android:layout_width="0dp"
                android:layout_weight=".80"
                android:layout_marginLeft="@dimen/margin_search"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions"/>

        <ProgressBar
                android:id="@+id/searchProgressBar"
                android:layout_width="0dp"
                android:layout_weight=".20"
                android:indeterminate="true"
                android:visibility="gone"
                android:layout_height="wrap_content">
        </ProgressBar>

    </LinearLayout>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_search"
            android:text="@string/stop_display_name"
            android:layout_marginBottom="4dp"/>

        <EditText
                android:id="@+id/stop_display_name_text"
                android:layout_width="match_parent"
                android:layout_marginLeft="@dimen/margin_search"
                android:inputType="textNoSuggestions"
                android:layout_height="wrap_content"
        />
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
            android:layout_width="match_parent"
                  android:layout_height="match_parent">

        <ProgressBar
                android:id="@+id/stopLoadProgressBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal"
                android:visibility="gone"
                android:indeterminate="true">
        </ProgressBar>

        <RelativeLayout  android:id="@+id/map_container" android:layout_height="match_parent" android:layout_width="match_parent">
        <fragment
                android:id="@+id/map"
                class="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
        </RelativeLayout>

    </LinearLayout>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/select_deps_fab"
            android:layout_width="wrap_content"
            android:visibility="invisible"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:minHeight="56dp"
            android:gravity="center"
            android:textAllCaps="true"
            android:paddingStart="4dp"
            android:paddingEnd="8dp"
            android:layout_margin="@dimen/fab_margin"
            app:backgroundTint="@color/colorPrimary"
            android:text="@string/configure_deps"
            android:textColor="@color/buttonTextColor"
            app:icon="@drawable/baseline_arrow_forward_24"
            />

</androidx.coordinatorlayout.widget.CoordinatorLayout>